Implementation for exercise 2: Go forth

--- a/01_Historical/CMakeLists.txt
+++ b/01_Historical/CMakeLists.txt
@@ -3,3 +3,6 @@ project("01_Historical")
 
 add_executable("good_old_times"
         good_old_times.cpp)
+
+add_executable("go_forth"
+        go_forth.cpp)
